@@ -2032,7 +2032,7 @@ class LMS
 	{
 		if($result = $this->DB->GetRow('SELECT d.id, d.number, d.name, d.customerid,
 				d.userid, d.address, d.zip, d.city, d.countryid, cn.name AS country,
-				d.ten, d.ssn, d.cdate, d.numberplanid, d.closed, d.divisionid, 
+				d.ten, d.ssn, d.cdate, d.numberplanid, d.closed, d.divisionid, d.paytime, 
 				(SELECT name FROM users WHERE id = d.userid) AS user, n.template,
 				ds.name AS division_name, ds.shortname AS division_shortname,
 				ds.address AS division_address, ds.zip AS division_zip,
@@ -2072,6 +2072,7 @@ class LMS
 				}
 
 			$result['valuep'] = round( ($result['value'] - floor($result['value'])) * 100);
+			$result['pdate'] = $result['cdate'] + ($result['paytime'] * 86400);
 
 			// NOTE: don't waste CPU/mem when printing history is not set:
 			if(!empty($this->CONFIG['notes']['print_balance_history']) && chkconfig($this->CONFIG['notes']['print_balance_history']))
