@@ -50,6 +50,14 @@
 		</TD>
 	</TR>
 	<TR CLASS="light">
+                <TD CLASS="fleft" WIDTH="1%" NOWRAP>
+	                <B>{t}Deadline:{/t}</B>
+	        </TD>
+	        <TD CLASS="fright" WIDTH="99%" NOWRAP>
+	                <INPUT TYPE="TEXT" NAME="note[paytime]" VALUE="{$note.paytime}" SIZE="10" {tip text="Enter deadline in days (optional)"}>
+	                ({$note.cdate+$note.paytime*86400|date_format:"%Y/%m/%d"})
+	        </TD>																							        </TR>
+	<TR CLASS="light">
 		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
 			<B>{t}Customer:{/t}</B>
 		</TD>
