@@ -11,6 +11,7 @@ version ? (????-??-??)
   - BTS#0000812: fixed date filter for Cash Import History (alec)
   - lmsd/payments: fixed buffer overflow in quarterday calculations (alec)
   - lmsd/payments: BTS#0000810 - fixed check_invoices option (alec)
+  - added deadline date for debit notes (alec)
 
 version 1.11.9 Moloc (2009-10-28):
  
